# FidelityFX-FSR2-Unity-URP

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  fsr2_gfx_device.cpp  fsr2_gfx_device.h  fsr2_gfx_device_dx11.cpp  fsr2_gfx_device_dx11.h  fsr2_unity_plugin.cpp  fsr2_unity_plugin.h
src/patch/: 0001-Added-FSR2-support-for-URP.patch
